<resources>
    <string name="app_name">MoveApp</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="ingreso_contraseña">Ingresa tu contraseña</string>
    <string name="bn_iniciar_sesion">Iniciar sesión</string>
    <string name="registrate">¿Aun no te has registrado?</string>
    <string name="registro">Registrate!!</string>
    <string name="app_registro">Registro</string>
    <string name="registro_tel_uno">Para empezar registra</string>
    <string name="registro_tel_dos">tu número de teléfono</string>
    <string name="numero_tel">300 XXX XXXX</string>
    <string name="verificar">Verificar</string>
    <string name="codigo_verifi">A continuación recibira un código de verificación.</string>
    <string name="Ing_codigo_ver">Ingrese código de verificación</string>
    <string name="Ingresar">Ingresar</string>
    <string name="debes_activar">Debes activar tu ubicación</string>
    <string name="debes_activar_dos">para el correcto funcionamiento</string>
    <string name="debes_activar_tres">de la aplicación</string>
    <string name="registro_datos">Bienvenido a MoveApp!</string>
    <string name="Nombre">Nombre</string>
    <string name="Correo">Correo</string>
    <string name="Apellido">Apellido</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Bienvenida">Bienvenido \"Nombre\"!</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Recontrasena">Repetir contraseña</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Tipo">Selecciona el tipo de</string>
    <string name="Tipo2">servicio de tu interes</string>
    <string name="cliente">Cliente</string>
    <string name="conductor">Conductor</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="mi_perfil">Mi perfil</string>
    <string name="mi_servicio">Mi servicio</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="Cambiar_clave">Cambiar clave</string>
    <string name="Salir">Salir</string>
    <string name="Otros">Otros</string>
    <string name="Usuario_Name">Usuario Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Editar">Editar</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_navegation_drawer">NavegationDrawer</string>
    <string name="ingresa_tu_direcci_n_de_destino">Ingresa tu dirección de destino</string>
    <string name="ingresa_tu_dirrecci_n_de_origen">Ingresa tu dirrección de origen</string>
    <string name="ubicaci_n_de_salida_y_llegada_del_servicio">Ubicación de salida y llegada del servicio</string>
    <string name="title_activity_maps">Map</string>
    <string name="ingresar_foto_desde_galer_a">Ingresar foto desde galería!</string>
    <string name="descripcion">Descripción del servicio</string>
    <string name="descripcion_pregunta">¿Cuál de los siguientes medios de transporte se ajusta a tus requerimientos?</string>
    <string name="camion">Camión furgón</string>
    <string name="camioneta">Camioneta</string>
    <string name="moto">Motocarga</string>
    <string name="descripcion_pregunta2">¿Cuál o cuáles de los siguientes objetos hacen parte de tu servicio?</string>
    <string name="armario">Armario</string>
    <string name="Cama">Cama</string>
    <string name="Comedor">Comedor</string>
    <string name="electrodo">Electrodomesticos</string>
    <string name="equiposoficina">Equipos de oficina</string>
    <string name="maquinapesada">Maquinaria pesada</string>
    <string name="maquinaliviana">Maquinaria liviana</string>
    <string name="descripcion_pregunta3">Usa el siguiente espacio para describir otros objetos o requerimientos de tu servicio</string>
    <string name="descripcion_write">Escribe la descripción de tu servicio</string>
    <string name="ofrecer_tarifa">Ofrezca su tarifa</string>
    <string name="descripcion_tarifa">El conductor puede realizar una contra oferta de acuerdo a la tarifa que usted desea pagar por el servicio.</string>
    <string name="precio_oferta">20000</string>
    <string name="Nombre_conductor">Ana Victoria Reyes</string>
    <string name="Vehículo">Vehiculo</string>
    <string name="tipo_vehiculo">Motocarga</string>
    <string name="placa">Placa</string>
    <string name="num_placa">010XYZ</string>
    <string name="telefono">Teléfono</string>
    <string name="Aceptar">Aceptar</string>
</resources>
