<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_Miperfil"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/mi_perfil"/>
        <item
                android:id="@+id/nav_Miservicio"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/mi_servicio"/>
        <item
                android:id="@+id/nav_Iniciarsesion"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/iniciar_sesion"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_Cambiarclave"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/Cambiar_clave"/>
        </menu>
    </item>

</menu>