<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registro4Activity">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/Tipo"
              android:gravity="center"
              android:paddingTop="50dp"
              android:textSize="20dp"
              android:textStyle="bold"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/Tipo2"
              android:gravity="center"
              android:paddingTop="10dp"
              android:textSize="20dp"
              android:textStyle="bold"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="80dp"
                  android:layout_marginLeft="30dp"
                  android:layout_marginRight="30dp"
                  android:orientation="horizontal">

        <GridLayout android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:orientation="vertical">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/usuario"
                       android:paddingEnd="10dp"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/usuario"
            android:paddingTop="10dp"/>
        </GridLayout>

      <GridLayout android:layout_width="0dp"
                  android:layout_height="150dp"
                  android:layout_weight="1.5"
                  android:orientation="vertical">

          <RadioGroup android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layoutDirection="rtl">

          <RadioButton android:layout_width="wrap_content"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:layout_gravity="left"
                       android:text="@string/cliente"
                       android:textSize="20dp"
                       android:id="@+id/rbnCliente"
          />

          <RadioButton android:layout_width="wrap_content"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:gravity="center"
                       android:layout_gravity="left"
                       android:text="@string/conductor"
                       android:textSize="20dp"
                       android:id="@+id/rbnConductor"/>

          </RadioGroup>
      </GridLayout>


    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:paddingTop="40dp">

        <Button android:layout_width="150dp"
                android:layout_height="75dp"
                android:id="@+id/bnContinuar"
                android:background="@drawable/button_animation"
                android:layout_marginBottom="8dp"
                android:textColor="@color/color_azulOscuro"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:text="@string/Siguiente">

        </Button>

    </LinearLayout>
</LinearLayout>