<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UbicacionActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/debes_activar"
                  android:gravity="center"
                  android:paddingTop="50dp"
                  android:textSize="20dp"
                  android:textStyle="bold"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/debes_activar_dos"
                  android:gravity="center"
                  android:textSize="20dp"
                  android:textStyle="bold"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/debes_activar_tres"
                  android:gravity="center"
                  android:textSize="20dp"
                  android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:paddingTop="20dp"
               android:src="@drawable/ubicacion"/>

        <ImageView android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/bnSiguiente"
                   android:paddingTop="50dp"
                   android:src="@drawable/flecha_derecha"/>
    </LinearLayout>











</LinearLayout>