<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TarifaUsuarioActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/ofrecer_tarifa"
                  android:gravity="center"
                  android:paddingTop="60dp"
                  android:textSize="22dp"
                      android:textStyle="bold"/>

        <TextView android:layout_width="343dp"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:paddingTop="20dp"
                  android:text="@string/descripcion_tarifa"
                  android:textSize="18dp"
                  android:layout_gravity="center"
                  android:textStyle="bold"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="40dp"
                      android:paddingRight="20dp"
                      android:orientation="horizontal">

            <ImageView android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="wrap_content"
                       android:src="@drawable/dollar"/>
            <EditText android:layout_width="0dp"
                      android:layout_weight="1.5"
                      android:id="@+id/etTarifaUsuario"
                      android:layout_height="wrap_content"
                      android:inputType="number"
                      />

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:paddingTop="40dp">

            <Button android:layout_width="150dp"
                    android:layout_height="75dp"
                    android:id="@+id/bnContinuar"
                    android:background="@drawable/button_animation"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/color_azulOscuro"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:text="@string/Siguiente">

            </Button>


    </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTarifa"
                android:layout_gravity="center"
                android:text="tarifa usuario"/>
    </LinearLayout>

</ScrollView>